[tool.poetry]
name = "shuffle"
version = "0.1.0"
description = "A cool lil music bot"
authors = ["SpookyO"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
"discord.py" = "^2.3.2"
jishaku = "^2.5.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
black = "^24.3.0"
isort = "^5.12.0"
nox = "^2023.4.22"

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false
reportIncompatibleMethodOverride = false

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"